--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/eliisath/Loggin-React-con-Auth0",
+  "homepage":"https://eliisath.github.io/Loggin-React-con-Auth0",
   "name": "react_actividad_seguridad",
   "version": "0.1.0",
   "private": true,
